fixes of the pull request #2. Now the ZED Oculus Sample is accommodated with the ZED SDK 1.0.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,10 +57,9 @@ SET(SDL_LIBRARIES SDL2 SDL2main)
 
 
 # Mandatory
-find_package(CUDA 6.5 REQUIRED)
+find_package(CUDA 7.5 REQUIRED)
 find_package(OpenGL 3.0 REQUIRED)
-find_package(OpenCV 2.4 COMPONENTS core highgui imgproc REQUIRED)
-find_package(Eigen3 REQUIRED)
+find_package(OpenCV 3.0 REQUIRED)
 
 include_directories(${ZED_INCLUDE_DIRS})
 include_directories(${GLUT_INCLUDE_DIRS})
@@ -70,7 +69,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${OCULUS_INCLUDE_DIRS})
 include_directories(${SDL_INCLUDE_DIRS})
 include_directories(${CUDA_INCLUDE_DIRS})
-include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories($ENV{EIGEN_DIR})
 
 
 link_directories(${ZED_LIBRARY_DIR})
