--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,26 +20,15 @@ SET(EXECUTABLE_OUTPUT_PATH ".")
 if(MSVC12)
 	SET(VS_VERSION VS2013)
 else(MSVC12) 
-	if(MSVC11)
-		SET(VS_VERSION VS2012)
-	else(MSVC11)
-		if(MSVC10)
-			SET(VS_VERSION VS2010)
-		endif(MSVC10)
-	endif(MSVC11)
+	SET(VS_VERSION VS2012)
 endif(MSVC12)
 
 SET(ZED_INCLUDE_DIRS $ENV{ZED_INCLUDE_DIRS})
 SET(ZED_LIBRARY_DIR $ENV{ZED_LIBRARY_DIR})
-if (CMAKE_CL_64) # 64 bits
-	SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_64})
-	SET(OCULUS_LIBRARY_DIRS ${OCULUS_PATH}/LibOVR/Lib/Windows/x64/Release/${VS_VERSION})
-	SET(SDL_LIBRARY_DIRS ${SDL_PATH}/lib/x64)
-else(CMAKE_CL_64) # 32 bits
-	SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_32})
-	SET(OCULUS_LIBRARY_DIRS ${OCULUS_PATH}/LibOVR/Lib/Windows/Win32/Release/${VS_VERSION})
-	SET(SDL_LIBRARY_DIRS ${SDL_PATH}/lib/x86)
-endif(CMAKE_CL_64)
+
+SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_64})
+SET(OCULUS_LIBRARY_DIRS ${OCULUS_PATH}/LibOVR/Lib/Windows/x64/Release/${VS_VERSION})
+SET(SDL_LIBRARY_DIRS ${SDL_PATH}/lib/x64)
 
 SET(GLEW_LIBRARY_DIRS $ENV{GLEW_LIBRARY_DIRS})
 SET(GLEW_LIBRARIES $ENV{GLEW_LIBRARY})
@@ -55,11 +44,10 @@ SET(OCULUS_LIBRARIES LibOVR)
 SET(SDL_INCLUDE_DIRS ${SDL_PATH}/include)
 SET(SDL_LIBRARIES SDL2 SDL2main)
 
-
 # Mandatory
-find_package(CUDA 7.5 REQUIRED)
+find_package(CUDA 8 REQUIRED)
 find_package(OpenGL 3.0 REQUIRED)
-find_package(OpenCV 3.0 REQUIRED)
+find_package(OpenCV 3.1 REQUIRED)
 
 include_directories(${ZED_INCLUDE_DIRS})
 include_directories(${GLUT_INCLUDE_DIRS})
@@ -86,17 +74,15 @@ FILE(GLOB_RECURSE SRC_FILES "${SRC_FOLDER}/*.cpp")
  
 ADD_EXECUTABLE(${execName} ${SRC_FILES})
 set_property(TARGET ${execName} PROPERTY OUTPUT_NAME "ZED Oculus Viewer")
-add_definitions(-std=c++0x)# -m64)
+add_definitions(-std=c++0x)
 
 # Add the required libraries for linking:
 TARGET_LINK_LIBRARIES(${execName}
 			${ZED_LIBRARIES}
 			${OPENGL_LIBRARIES}
-            ${GLUT_LIBRARY}
+            		${GLUT_LIBRARY}
 			${GLEW_LIBRARIES}			
 			${OpenCV_LIBRARIES}
 			${SDL_LIBRARIES}
 			${OCULUS_LIBRARIES}
  )
-
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3" ) # Release Perf mode
