Update README. Cleanup CMake
Remove ZED SDK minor version specification from CMake
Use lowercase consistently for CMake commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-SET(OCULUS_PATH "OCULUS_SDK_ROOT_DIR-NOTFOUND" REQUIRED CACHE STRING "Path of OVR SDK folder. eg: C:\\ovr_sdk_win_0.17.0\\OculusSDK")
-SET(SDL_PATH "SDL2_ROOT_DIR-NOTFOUND" REQUIRED CACHE STRING "Path of SDL2 folder. eg: C:\\SDL2-2.0.3")
+set(OCULUS_PATH "OCULUS_SDK_ROOT_DIR-NOTFOUND" REQUIRED CACHE STRING "Path of OVR SDK folder. eg: C:\\ovr_sdk_win_0.17.0\\OculusSDK")
+set(SDL_PATH "SDL2_ROOT_DIR-NOTFOUND" REQUIRED CACHE STRING "Path of SDL2 folder. eg: C:\\SDL2-2.0.3")
 
 project(ZED_Stereo_Passthrough)
 cmake_minimum_required(VERSION 3.1)
@@ -12,22 +12,22 @@ endif(COMMAND cmake_policy)
 set(CMAKE_CXX_STANDARD 11)
 
 # Mandatory
-find_package(ZED 3.0 REQUIRED)
+find_package(ZED 3 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(CUDA REQUIRED)
 find_package(OpenGL 3.0 REQUIRED)
 
-SET(OCULUS_LIBRARY_DIRS ${OCULUS_PATH}/LibOVR/Lib/Windows/x64/Release/VS2015)
-SET(SDL_LIBRARY_DIRS ${SDL_PATH}/lib/x64)
+set(OCULUS_LIBRARY_DIRS ${OCULUS_PATH}/LibOVR/Lib/Windows/x64/Release/VS2015)
+set(SDL_LIBRARY_DIRS ${SDL_PATH}/lib/x64)
 
-SET(OCULUS_INCLUDE_DIRS ${OCULUS_PATH}/LibOVR/Include ${OCULUS_PATH}/LibOVRKernel/Src)
-SET(OCULUS_LIBRARIES LibOVR)
+set(OCULUS_INCLUDE_DIRS ${OCULUS_PATH}/LibOVR/Include ${OCULUS_PATH}/LibOVRKernel/Src)
+set(OCULUS_LIBRARIES LibOVR)
 
-SET(SDL_INCLUDE_DIRS ${SDL_PATH}/include)
-SET(SDL_LIBRARIES SDL2 SDL2main)
+set(SDL_INCLUDE_DIRS ${SDL_PATH}/include)
+set(SDL_LIBRARIES SDL2 SDL2main)
 
-SET(SRC_FOLDER src)
-FILE(GLOB_RECURSE SRC_FILES "${SRC_FOLDER}/*.cpp")
+set(SRC_FOLDER src)
+file(GLOB_RECURSE SRC_FILES "${SRC_FOLDER}/*.cpp")
 
 add_executable(${CMAKE_PROJECT_NAME} ${SRC_FILES})
 target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
